# 11ElevenHacks

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py  state.py
backend/app/agent/: __init__.py  nim_client.py
backend/app/data/: __init__.py  events_mock.py
backend/app/routers/: __init__.py  chat.py  events.py  health.py  planner.py  tools.py
backend/app/schemas/: common.py  events.py  planner.py
backend/app/services/: __init__.py  planner.py
backend/app/tools/: __init__.py  _demand.py  _gpu.py  city_state.py  diagnostics.py  dispatch.py  events.py  explanation.py  optimization.py  registry.py  simulation.py
backend/app/ws/: __init__.py  training.py
backend/scripts/: agent_evals.py  bench_reward.py  nim_smoke_test.py  run_backend.sh  run_nim.sh
backend/tests/: test_chat.py  test_events.py  test_health.py  test_planner.py  test_tools_router.py
backend/tests/tools/: test_city_state.py  test_demand.py  test_diagnostics.py  test_events.py  test_explanation.py  test_optimization.py  test_simulation.py
data/: README.md
docs/: agent-orchestration.md  agent-reliability.md  agent-tools.md  agent-workflows.md  backend-hosting-plan.md  data-layer.md  hackathon-details.md  idea-critique.md  map-views-brainstorm.md  pitch.md  project-idea.md  real-world-transit-practice.md  reward-and-optimizer.md  spark-story.md
frontend/: .env.example  .gitignore  package-lock.json  package.json  vitest.config.ts
frontend/app/: page.tsx  (+2 more)
scripts/: fetch_data.py
(+64 files in other folders)
